# douceville

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  TODO.md  app.py  collegeslycees.py  config.yml  docker-compose.dev.yml  docker-compose.yml  douceville.py  empty_users.py  environment.yml  example_fastapi.py  launch.py  launch.sh  maillage.py  pyproject.toml  repare_secteur.py  requirements.txt  reset_bd.sh  restart.sh  sample.env  setup.cfg  setup.py  stop.sh  test_join.py  test_requete_isochrone.py  update_image.sh
.github/workflows/: docker-image.yml
CollegesLycees/: __init__.py  analyse.py  config.py  conv_rdf.py  conv_utils.py  db.py  export_csv.py  import.sh  import_etablissements.py  import_lycees.py  init_db.py  models.py  process_lycee.py  read_config.py  routes.py  test_rdf.py  webapp.py
CollegesLycees/templates/: base.html  map.html
douceville/: DVLogFormatter.py  __init__.py  analyse.py  app.py  config.py  conv_geoloc_enseignement.py  conv_rdf.py  conv_utils.py  empty.py  geographique.py  import_etablissements.py  init_spatialite.py  isochrone.py  models.py  retriever.py  routes.py  utils.py
douceville/blueprints/carte/: __init__.py  forms.py  routes.py
douceville/blueprints/carte/templates/: carte.html  carte_query.html
douceville/blueprints/carte/templates/carte/: carte.html  carte_query.html
douceville/blueprints/enseignement/: __init__.py  routes.py
douceville/blueprints/isochrone/: __init__.py  geographique.py  routes.py
douceville/blueprints/payment/: __init__.py  routes.py
douceville/blueprints/payment/js/: stripe.js
douceville/blueprints/payment/templates/: pay.html
douceville/blueprints/payment/templates/payment/: checkout.html  test.html
douceville/blueprints/users/: forms.py  manage_users.py  routes.py
douceville/blueprints/users/templates/: login.html  profile.html  signup.html
douceville/blueprints/users/templates/users/: login.html  signup.html
douceville/carte/: __init__.py  forms.py  routes.py
douceville/carte/templates/: carte.html  carte_query.html
douceville/payment/: routes.py
douceville/scripts/: analyse.py  conv_geoloc_enseignement.py  conv_rdf.py  conv_utils.py  crawler.py  empty.py  import2.py  import_etablissements.py  read_config.py  test_requete_isochrone.py
douceville/templates/: base.html  index.html  map.html
douceville/users/: forms.py  routes.py
etc/: debug.conf  douceville.service  maillage.service  nginx.conf  nginx_conf.conf  uwsgi.ini
maillage/: __init__.py  analyse.py  config.py  conv_geoloc_enseignement.py  conv_rdf.py  conv_utils.py  empty.py  import_etablissements.py  models.py  read_config.py  routes.py
maillage/templates/: index.html  map.html
migrations/versions/: 3183508f12f8_.py  54e1a8340d29_.py  a65bc325de9e_.py  e913540f8ea6_.py
src/douceville/: __init__.py  app.py  auth.py  config.py  crud.py  dependency.py  flet_app.py  france_ban.py  geographique.py  helpers.py  models.py  rest_api_entreypoint.py  retriever.py  schemas.py  server.py  utils.py
src/douceville/blueprints/carte/: __init__.py  forms.py  routes.py
src/douceville/blueprints/carte/templates/: carte.html
src/douceville/blueprints/enseignement/: __init__.py  routes.py
src/douceville/blueprints/isochrone/: __init__.py  geographique.py  routes.py
src/douceville/blueprints/payment/: __init__.py  routes.py
src/douceville/blueprints/payment/js/: stripe.js
src/douceville/blueprints/users/: __init__.py  forms.py  manage_users.py  routes.py
src/douceville/blueprints/users/templates/: profile.html
src/douceville/scripts/: __init__.py  conv_geoloc_enseignement.py  conv_rdf.py  conv_utils.py  crawler.py  import_etablissements.py  read_config.py  test_join.py
tests/: config.yml  conftest.py  coverage.conf  test_api.py  test_auth.py  test_conv_rec.py  test_enseignement.py  test_isochrones.py  test_local_ors.py  test_requete_isochrone.py  test_retriever.py  test_server.py  test_supabase.py
