[build-system]
requires = [
    "pdm-backend>=2.1.0,<3.0.0",
    "setuptools>=67.0.0,<69.0.0",
    "wheel",
    "toml"
]
build-backend = "pdm.backend"

[project]
name = "douceville"
dynamic = ["version"]
description = ""
authors = [
    { name = "Yann de Thé", email = "yann@gmail.com" },
]
dependencies = [
    "pydantic-settings>=2.6.1",
    "logfire>=2.6.2",
    "rich>=13.9.4",
    "psycopg2-binary>=2.9.10",
    "geoalchemy2[shapely]>=0.16.0",
    "typer>=0.15.1",
    "fastparquet>=2024.11.0",
    "pandas>=2.2.3",
    "geopy>=2.4.1",
    "fastapi[standard]>=0.115.6",
    "pyjwt[crypto]>=2.10.1",
    "sqlmodel>=0.0.22",
    "hypercorn>=0.17.3",
    "openrouteservice>=2.3.3",
    "asgiref>=3.8.1"
]
requires-python = ">=3.10,<3.12"

[project.urls]
"Bug Tracker" = "https://gitlab.com/ydethe/douceville/-/issues"
Homepage = "https://gitlab.com/ydethe/douceville"
Source = "https://gitlab.com/ydethe/douceville"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = [
    "tests",
    "build",
    "dist",
]

[tool.pdm.dev-dependencies]
doc = [
    "pdoc3",
    "pylint",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-instafail",
    "pytest-picked",
    "pytest-sugar",
    "pytest-html",
]

[tool.pdm.scripts]
test.shell = """\
    mkdir -p build/htmldoc/tests
    pytest --html=build/htmldoc/tests/report.html --self-contained-html --junitxml=build/junit.xml --cov-config=.coveragerc --cov src/douceville tests --doctest-modules src/douceville
    coverage html -d build/htmldoc/coverage
"""
doc.shell = """\
    mkdir -p build/htmldoc/douceville
    pdoc --html --force --config latex_math=True -o build/htmldoc douceville
    pyreverse -s0 douceville -k --colorized -p douceville -m no -d build/htmldoc
"""
[project.scripts]
dv-cli = "douceville.scripts:app"

[dependency-groups]
dev = [
    "ipython",
    "black==22.3.0",
    "pandas",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3",
    "pylint",
]
test = [
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-instafail",
    "pytest-picked",
    "pytest-sugar",
    "pytest-html",
]
