[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "douceville"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yann de Thé", email = "yann@gmail.com" },
]
dependencies = [
    "asgiref>=3.8.1",
    "fastapi[standard]>=0.115.6",
    "fastparquet>=2024.11.0",
    "fief-client[fastapi]>=0.20.0",
    "geoalchemy2[shapely]>=0.16.0",
    "geopy>=2.4.1",
    "hypercorn>=0.17.3",
    "logfire[fastapi]>=2.7.0",
    "openrouteservice>=2.3.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pyjwt[crypto]>=2.10.1",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/douceville/-/issues"
Homepage = "https://github.com/ydethe/douceville"
Source = "https://github.com/ydethe/douceville"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[project.scripts]
dv-cli = "douceville.scripts:app"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "httpx>=0.27.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.pdm.scripts]
test.shell = """\
    mkdir -p build/htmldoc/tests
    pytest --html=build/htmldoc/tests/report.html --self-contained-html --junitxml=build/junit.xml --cov-config=.coveragerc --cov src/douceville tests --doctest-modules src/douceville
    coverage html -d build/htmldoc/coverage
"""
doc.shell = """\
    mkdir -p build/htmldoc/douceville
    pdoc --html --force --config latex_math=True -o build/htmldoc douceville
    pyreverse -s0 douceville -k --colorized -p douceville -m no -d build/htmldoc
"""
