[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "douceville"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yann de Thé", email = "yann@gmail.com" },
]
dependencies = [
    "asgiref>=3.0.0",
    "fastapi[standard]>=0.115",
    "fastparquet>=2022",
    "geoalchemy2[shapely]>=0.14.6",
    "geopy>=0.93",
    "hypercorn>=0.15",
    "itsdangerous>=2.2.0",
    "kinde-python-sdk>=1.2.4",
    "logfire[fastapi]>=2",
    "numpy>=2",
    "openrouteservice>=0.1",
    "pandas>=2",
    "psycopg2-binary>=2.9.6",
    "pydantic-settings>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "rich>=13.4.2",
    "sqlmodel>=0.0.14",
    "typer>=0.12.3",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/douceville/-/issues"
Homepage = "https://github.com/ydethe/douceville"
Source = "https://github.com/ydethe/douceville"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.uv]
resolution = "highest"

[project.scripts]
dv-cli = "douceville.scripts:app"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "httpx>=0.27.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.pdm.scripts]
test.shell = """\
    mkdir -p build/htmldoc/tests
    pytest --html=build/htmldoc/tests/report.html --self-contained-html --junitxml=build/junit.xml --cov-config=.coveragerc --cov src/douceville tests --doctest-modules src/douceville
    coverage html -d build/htmldoc/coverage
"""
doc.shell = """\
    mkdir -p build/htmldoc/douceville
    pdoc --html --force --config latex_math=True -o build/htmldoc douceville
    pyreverse -s0 douceville -k --colorized -p douceville -m no -d build/htmldoc
"""
