[metadata]
name = AlgebraicNumber
author = Yann de The
author_email = yann@johncloud.fr
home-page = https://gitlab.com/ydethe/algebraicnumber
description = Manipulation of algebraic numbers
long-description = file: README.rst
version = 2.0.0
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
url = https://gitlab.com/ydethe/algebraicnumber

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = find:
setup_requires =
    setuptools >=38.3.0
    wheel >=0.29.0
tests_require =
    tox
    pytest

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar

[tox:tox]
envlist = py,flake8

[testenv]
passenv =
    CODECOV_*
    GITLAB_CI
    CI_BUILD_*
setenv =
    PYTHONPATH ~= {toxinidir}{:}{toxinidir}/tests
deps =
    pytest-cov
    pytest
    -rrequirements.txt
allowlist_externals =
    mkdir
    mv
    bash
commands =
    python3 --version
    mkdir -p test-results
    python3 -m pytest --cov-config=coverage.cfg --cov AlgebraicNumber tests --junitxml=test-results/junit.xml --doctest-modules AlgebraicNumber
sitepackages = true
recreate = false

[tool:pytest]
junit_family = xunit2

[testenv:flake8]
skip_install = true
deps =
    flake8
    flake8-bugbear
    flake8-colors
    flake8-junit-report
    flake8-docstrings
    flake8-import-order
    pep8-naming
commands =
    mkdir -p test-results
    flake8 --exit-zero AlgebraicNumber tests/ setup.py --output-file=test-results/flake8_report.log
    flake8_junit test-results/flake8_report.log test-results/flake8_junit.xml

[flake8]
ignore = D203, W503, E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
max-complexity = 10
import-order-style = google
application-import-names = flake8

[egg_info]
tag_build =
tag_date = 0

